# maxiscript

./: Cargo.toml  README.md
doc/: optimizing.md  use_of_opcodes.md
examples/: lamport.txt  lamport2.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse_display.rs  stack_transform.rs
src/: compile.rs  error.rs  ir.rs  lib.rs  main.rs  op.rs  opcodes.rs  optimize.rs  parse.rs  sorting.rs  stack.rs  util.rs
