[package]
name = "bitfony-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
bitfony = { path = ".." }

[[bin]]
name = "parse_display"
path = "fuzz_targets/parse_display.rs"
test = false
doc = false
bench = false

[[bin]]
name = "stack_transform"
path = "fuzz_targets/stack_transform.rs"
test = false
doc = false
bench = false
